# dtv

./: .gitignore  README.md  all_in_one.rs  b_search.py  bilibili_room_info.py  bilibili_stream.py  douyin_streamer_detail.rs  douyintest.py  huya_search.rs  huya_ts.py  package-lock.json  package.json  pnpm-lock.yaml  test_huya2.py  vite.config.ts  抖音直播API接口分析.md  斗鱼直播API接口分析.md
.github/workflows/: build.yml
danmu_fetch/: Cargo.toml
danmu_fetch/src/: auth.rs  lib.rs  main.rs  websocket.rs
douyin_rust/: Cargo.toml
douyin_rust/src/: main.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fetch_douyin_data_new.js  keep_awake.rs  lib.rs  main.rs  proxy.rs  test_ttwid.js
src/components/CommonCategory/: index.vue
src/components/CommonStreamerList/: index.vue
src/components/DanmuList/: index.vue
src/components/DouyinCategory/: index.vue  types.ts
src/components/DouyinStreamerList/: index.vue  types.ts
src/components/DouyuCategory/: index.vue
src/components/DouyuStreamerList/: index.vue  types.ts
src/components/FollowsList/: FilterChips.vue  FolderContextMenu.vue  index.css  (+5 more)
src/layout/: Header.vue  MainLayout.vue  Sidebar.vue
src/pages/: BilibiliHomeView.vue  BilibiliPlayerView.vue  DouyinHomeView.vue  DouyinPlayerView.vue  DouyuHomeView.vue  DouyuPlayerView.vue  HuyaHomeView.vue  HuyaPlayerView.vue  PlayerView.vue
src/router/: index.ts
src/store/: followStore.ts
src/stores/: bilibili.ts
src/styles/: global.css
src/types/: mpegts.d.ts
(+17 files in other folders)
