[package]
name = "danmu_fetch"
version = "0.1.0"
edition = "2021"

[lib]
name = "danmu_fetch"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.17", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "json",
] }
native-tls = "0.2.0"
tungstenite = "0.20.1"
http = "0.2.11"
url = "2.3.1"
brotlic = "0.8.1"
log = "0.4"
md5 = "0.7"